--- a/apps/widget/src/components/Modal/styles.module.scss
+++ b/apps/widget/src/components/Modal/styles.module.scss
@@ -73,6 +73,7 @@
     font-weight: 700;
     font-size: 35px;
     line-height: 48px;
+    letter-spacing: normal;
     color: #000;
 
     @media (max-width: 767px) {
@@ -86,6 +87,7 @@
     font-family: 'Arial', sans-serif;
     font-size: 16px;
     line-height: 24px;
+    letter-spacing: normal;
     color: #313440;
   }
 
